--- a/assets/css/flat-admin.css
+++ b/assets/css/flat-admin.css
@@ -7043,6 +7043,29 @@ footer.app-footer .footer-copyright {
 	cursor: pointer;
 	background-color: rgba(255, 255, 255, 0.1);
 }
+
+.btn-floating .toggle-content ul.extra_actions {
+	list-style: none;
+	padding: 0;
+	margin: 0;
+}
+.btn-floating .toggle-content ul.extra_actions > li {
+	padding: 0;
+}
+.btn-floating .toggle-content ul.extra_actions > li a {
+	display: block;
+	color: #FFF;
+	text-decoration: none;
+	padding: 10px 20px;
+	border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+	text-transform: uppercase;
+	font-size: 0.9em;
+}
+.btn-floating .toggle-content ul.extra_actions > li a:hover {
+	cursor: pointer;
+	background-color: rgba(255, 255, 255, 0.1);
+}
+
 .btn-floating.active .btn-bg {
 	border-radius: 3px;
 }
